--- a/chemistry/atom-calculator.html
+++ b/chemistry/atom-calculator.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="/assets/css/share-global.css" />
 
 <meta name="title" content="Atom Calculator | Calculate Atomic Structure & Composition Easily">
-<meta name="description" content="Use our free Atom Calculator to determine the number of protons, neutrons, and electrons in any element. Instantly calculate atomic mass, AZE notation, and atomic composition with precision. Perfect for students, teachers, and chemistry enthusiasts.">
+<meta name="description" content="Our free Atom Calculator tells you how many protons, neutrons and electrons there are in any element. Calculate precisely atomic mass, AZE notation and atomic composition.">
 
 <meta name="author" content="Calclulo - Atom Calculator">
 <meta name="robots" content="index, follow">
@@ -26,14 +26,14 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/chemistry/atom-calculator">
 <meta property="og:title" content="Free Atom Calculator | Find Protons, Neutrons & Atomic Mass">
-<meta property="og:description" content="Discover the atomic structure of any element using our free Atom Calculator. Calculate protons, neutrons, electrons, AZE notation, and atomic mass in seconds. Perfect for chemistry students and researchers.">
+<meta property="og:description" content="To find out the atomic structure of any element, use our free Atom Calculator. Compute the protons, neutrons, electrons, AZE notation and the atomic mass within seconds. Ideal in the chemistry students and researchers.">
 <meta property="og:image" content="https://calclulo.com/assets/images/atom-calculator-thumbnail.png">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://calclulo.com/chemistry/atom-calculator">
 <meta name="twitter:title" content="Atom Calculator | Accurate Atomic Composition & Mass">
-<meta name="twitter:description" content="Easily calculate an element's atomic number, mass number, protons, neutrons, electrons, and AZE notation. Our free Atom Calculator is designed for students, teachers, and science enthusiasts.">
+<meta name="twitter:description" content="Calculate element atomic number, mass number, protons, neutrons, electrons and AZE notation easily. Atom Calculator is our free version that is aimed at students, educators, and science enthusiasts.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/atom-calculator-thumbnail.png">
 
 <!-- Favicons -->
@@ -194,8 +194,8 @@ Everyday Life
 </h1>
 
   <p class="calculator-info-p">
-  The Atom Calculator quickly shows an element’s protons, neutrons, electrons, and atomic mass.
-Just enter a few details, and you get clear, accurate results instantly.
+  Atom Calculator provides the protons, neutrons, electrons and the atomic mass of an element in a quick manner.
+You simply have to add couple of details and the results are clear and accurate instantly.
   </p>
 </div>
 
@@ -499,29 +499,23 @@ Clear all changes
   
   <h2>What is an atom</h2>
   <p>
-    An atom is the foundational building block of all ordinary matter, retaining the unique chemical identity of its element. It consists of a dense nucleus composed of positively charged protons and neutral neutrons, surrounded by a diffuse cloud of negatively charged electrons. The number of protons (the atomic number) identifies the element—for example, hydrogen has one proton, helium has two. Neutrons vary and define isotopes—atoms with the same element identity but different mass numbers. Electrons, with negligible mass relative to nucleons, determine chemical behavior by occupying quantized energy levels and participating in bonding.
+    The basic building block of all matter, an atom has kept the specific chemical identity of its element. It is made up of a massy nucleus containing positively charged protons and neutral neutrons enclosed by a diffuse halo of negatively charged electrons. The atomic number of protons determines the element- e.g. hydrogen has one, helium has two. Neutrons are diverse and define the isotopes--atoms of the same element identity but of varying mass numbers. Chemical behavior is determined by electrons, which are extremely light in comparison with nucleons, and which occupy quantized energy levels and are involved in bonding.
   </p>
   <p>
-    Atoms can gain or lose electrons, forming ions and altering their net charge. Yet the nucleus defines the core identity and mass attributes. Understanding atoms requires balancing simplicity—counting protons, neutrons, electrons—with acknowledgment that real atomic mass involves binding energy and isotopic distributions. An atom calculator helps translate these core particle counts into useful output: atomic number, mass number, AZE notation (mass number and atomic number around the chemical symbol), and approximate mass in atomic mass units.
+    Electrons may be added or lost by atoms, and ions are composed. But the nucleus identifies the essence and mass qualities. The simplicity of atoms (number of protons, neutrons, electrons) and the recognition that the actual atomic mass involves binding energy, and inter-isotope distributions are in conflict. A computerized atom calculator makes these core particle counts useful by converting them to the following useful output, atomic number, mass number, AZE notation (mass number and atomic number around the chemical symbol), and approximate mass in atomic mass units.
   </p>
-  <p>
-    By using the calculator, students and enthusiasts can rapidly determine how many protons, neutrons, and electrons an atom has, what its isotope notation looks like, and its approximate mass. This approach supports foundational chemistry learning by translating core atomic theory into hands-on calculation—bridging abstract concepts and tangible numbers.
-  </p>
-  
+
   <h2>Atomic number vs atomic mass</h2>
   <p>
-    A common source of confusion is the difference between atomic number (Z) and atomic mass. The atomic number is a whole number counting protons in the nucleus. It uniquely identifies each element—for instance, Z = 6 is carbon, Z = 8 is oxygen. Atomic mass, in contrast, has two related meanings: mass number (A) and atomic weight.
+    One of the most popular misconceptions is that of the atomic number (Z) and atomic mass. The atomic number is the entire number of protons within the nucleus. It has a unique identification of every element, such as Z = 6 identifies carbon, Z = 8 identifies oxygen. Atomic mass, however, is defined in two ways, mass number ( A ), and atomic weight.
   </p>
-  <p>
-    The mass number is an integer equal to the sum of protons and neutrons in a specific nucleus. It defines an isotope: carbon-12 has A = 12; carbon-13 has A = 13. By contrast, atomic weight (commonly labeled “atomic mass” on a periodic table) is the weighted average of all naturally occurring isotopes of that element, resulting in a decimal like 12.011 for carbon or 35.45 for chlorine. These decimals reflect both isotope abundances and the mass defect from nuclear binding energy.
-  </p>
-  <p>
-    When working with an atom calculator, the clear rule is: use Z for identity and electrons in a neutral atom, use A for neutrons via A − Z, and remember that published atomic weights are averages—not exact values for a single atom. This distinction allows accurate core calculations while understanding real-world tables show averaged values.
+    <p>
+    The number of protons plus neutrons in an individual nucleus is an integer that is known as the mass number. It describes the term isotope: the A of carbon-12 is = 12, the A of carbon-13 = = 13. In comparison, atomic weight (also known as atomic mass on a periodic table) is the weighted mean of all naturally occurring isotopes of an element, giving an answer such as 12.011 of carbon or 35.45 of chlorine. These decimals are a representation of isotope abundances as well as mass defect of nuclear binding energy.
   </p>
   
   <h2>How to calculate the atomic number, mass and charge</h2>
   <p>
-    Atom calculators follow clear integer relationships based on particle counts. The main rules are:
+    Atom calculators are based upon definite integer relationships founded on the number of particles. The main rules are:
   </p>
   <ul>
     <li><strong>Atomic number (Z):</strong> equals the number of protons.</li>
@@ -532,7 +526,7 @@ Clear all changes
     <li><strong>Electrons (ion):</strong> equal Z − charge (if ion charge is positive, fewer electrons; negative charge means more electrons).</li>
   </ul>
   <p>
-    To approximate the total atomic mass in atomic mass units (u), the calculator uses accepted average masses:
+    The calculator calculates the number of atomic mass units (u) of atomic mass by taking the accepted average masses:
   </p>
   <ul>
     <li><strong>Proton:</strong> ≈ 1.007276 u</li>
@@ -555,37 +549,23 @@ Clear all changes
     <li>Total ≈ 11.09111 u</li>
   </ul>
   <p>
-    This method gives precise, scientifically grounded results for educational and general chemistry use. It balances simplicity with accuracy.
+    This technique provides accurate scientifically based measurements to use in education and general chemistry. It is between accuracy and simplicity.
   </p>
   
-  <h2>FAQ</h2>
+  <h2>FAQs</h2>
   <p>
-    <strong>Why isn’t the atomic mass an exact whole number?</strong> Because the atomic weight you see in references is a weighted average of naturally occurring isotopes, and because nuclear binding energy causes a mass defect. So the number reflects both isotope distribution and energy-based mass reduction.
+    <strong>Why isn’t the atomic mass an exact whole number?</strong> Since the atomic weight you will find in books is a weighted average of naturally occurring isotopes, and because a mass defect is caused by nuclear binding energy. So the number indicates isotope distribution as well as energy based mass reduction.
   </p>
   <p>
-    <strong>Do electrons significantly affect atomic mass?</strong> Electrons have a tiny mass (~0.0005486 u), so they play almost no role in total mass. However, for precise atomic mass approximations, calculators include them for completeness.
+    <strong>Do electrons significantly affect atomic mass?</strong> The mass of electrons is tiny (almost negligible, approximately 0.0005486 u), and therefore does not contribute much to the total mass. Nevertheless, to get exact atomic mass estimates, calculators have them to be complete.
   </p>
   <p>
-    <strong>How do isotopes relate to ions?</strong> Isotopes differ in neutron count (same Z, different A); ions differ in electron count (same nucleus, different net charge). A single isotope can have multiple ionic forms depending on how many electrons are added or removed.
+    <strong>How do isotopes relate to ions?</strong> Isotopes: they have the same Z, but different A; ions: they have the same nucleus, but different net charge. Different ionic forms of a given isotope may exist with the addition or removal of electrons.
   </p>
   <p>
-    <strong>Why might the calculator’s result differ from a textbook?</strong> Textbooks often list experimental isotope masses or standard atomic weights based on high-precision data including binding energy. The calculator gives a very good approximation using accepted particle masses. It’s ideal for learning and routine use but not for high-precision nuclear physics.
+    <strong>Why might the calculator’s result differ from a textbook?</strong> Experimental isotope masses or standard atomic weights are commonly found in textbooks, and are typically based on high-precision data (including binding energy). This calculator approximates very well with accepted particle masses. It is best used in education and in everyday applications but not in fine tuned nuclear physics.
   </p>
-  
-  <h2>Notes and warnings</h2>
-  <p>
-    <strong>Purpose:</strong> This calculator is intended for educational and general chemistry purposes. It helps users compute atomic composition, AZE notation, and approximate masses. It is transparent: each output is traceable to fundamental formulas.
-  </p>
-  <p>
-    <strong>Accuracy limits:</strong> The calculator uses average proton, neutron, and electron masses to estimate isotope mass. It does not incorporate exact nuclear binding energy or isotope-specific experimental mass values. For highly accurate or specialized work, consult authoritative references such as NIST or primary nuclear data tables.
-  </p>
-  <p>
-    <strong>Input rules and error handling:</strong> Only integer values should be used for atomic and mass numbers; charges may be positive or negative. Invalid or inconsistent entries—such as having fewer mass number than protons or negative electron counts—trigger user-friendly error messages to guide correction.
-  </p>
-  <p>
-    <strong>Use with caution:</strong> This tool is not suitable for professional nuclear engineering or safety critical applications. It is a learning and support tool, not a certified instrument. Always refer to verified nuclear data sources for research or industrial use.
-  </p>
-  
+
 </div>
   </section>
   
