--- a/math/percent-off-calculator.html
+++ b/math/percent-off-calculator.html
@@ -619,29 +619,29 @@ Clear all changes
     For merchants, the strategic use of percent off depends on elasticity of demand. When demand is price elastic, a percent reduction can increase quantity sold enough to increase revenue. When demand is inelastic, deep discounts erode margin without substantial volume gains. Good use of a percent off calculator includes scenario testing: model sales volume at different percent off levels, include shipping behavior (free shipping thresholds), and consider lifetime value — a customer attracted by a discount may be worth more over time.
   </p>  <p>
     Finally, ethical considerations and transparency matter. Misleading “original” prices, artificially inflated references, or “fake” limited stock claims can harm brand trust and invite legal risks in many jurisdictions. Use discounts honestly: provide clear terms, disclose whether tax is included, and avoid bait-and-switch tactics. When shoppers feel treated fairly, they return; short-term gains from misleading discounts often cost brands more in the long run.
-  </p>  <h2>FAQ</h2>
+  </p>  <h2>FAQs</h2>
   <p>
-    Q: What’s the difference between “percent off” and “percentage points”?
+    What’s the difference between “percent off” and “percentage points”?
     <br><br>
     A: These two terms are often confused. “Percent off” is a multiplicative change of the original amount. For example, 20% off a $200 item reduces the price by 200 × 0.20 = 40, producing a final price of 160. “Percentage points” describe the absolute difference between two percentage values. If a tax rate rises from 5% to 7%, that is a 2 percentage point increase — but a 40% relative increase in the tax rate. In retail percent-off marketing you almost always talk about percent change (multiplicative), not percentage points.
   </p>  <p>
-    Q: How should I combine multiple discounts correctly?
+    How should I combine multiple discounts correctly?
     <br><br>
     A: Apply discounts sequentially, not additively, unless the promotion explicitly states a single combined percentage. If you have two coupons, 10% and 20%, apply the first to the original price, then apply the second to the reduced price. Example (step-by-step): original = 100. After 10% off → 100 − (100 × 0.10) = 90. After 20% off → 90 − (90 × 0.20) = 72. The effective single discount equals 28% in this case (not 30%).
   </p>  <p>
-    Q: Does tax affect the savings I see from a percent off?
+    Does tax affect the savings I see from a percent off?
     <br><br>
     A: Tax matters for the buyer’s pocket. If the displayed price excludes tax and tax is added after the discount, the buyer’s gross savings depend on the tax rate because tax is computed on the discounted base. If the displayed price already includes tax, applying a percent off to that price directly reduces the final amount the buyer pays. For example, pre-tax price 100 with a 25% discount and 8% tax: discounted net 100 × 0.75 = 75; gross payment 75 × 1.08 = 81. If the original was taxed first (100 × 1.08 = 108) and then discounted 25% (108 × 0.75 = 81) the final is the same numerically; however in practice retailers may round differently at different steps, so small cent-level differences can appear.
   </p>  <p>
-    Q: How should a calculator handle rounding and precision?
+    How should a calculator handle rounding and precision?
     <br><br>
     A: Rounding can change the customer-facing result by a few cents. Best practice is to compute in the highest precision possible and round at the final output to two decimals for currency display. If business rules or local laws require specific rounding conventions (for example rounding to the nearest cent or nearest 5 cents), implement those rules consistently. A percent off calculator generally returns values with two decimal places; allow a settings option for different rounding modes when accuracy matters for accounting.
   </p>  <p>
-    Q: What about negative percentages or percentages over 100%?
+    What about negative percentages or percentages over 100%?
     <br><br>
     A: Negative percentages represent increases rather than discounts (for example a −10% discount is a 10% increase). Percentages greater than 100% are valid mathematically — a 150% discount would imply the seller pays the buyer (unusual in normal retail). In practice, limit percent inputs to reasonable ranges and provide validation — e.g., disallow discounts larger than 100% unless a specific business case exists.
   </p>  <p>
-    Q: Why might a displayed “percent off” be misleading and how can I check it?
+    Why might a displayed “percent off” be misleading and how can I check it?
     <br><br>
     A: Misleading discounts typically come from inflated reference prices, hidden terms (like excluding sale items), or minimum purchase conditions. To check a percent off, compute the actual savings: savings = reference − sale price, percent off = (savings ÷ reference) × 100. If the retailer’s “was” price looks unrealistic, try checking historical prices on price-tracking sites or browser extensions that show price history. A transparent percent off calculator will let you enter the reference price, sale price, and tax rules so you can see the true savings.
   </p>
