--- a/sports/on-base-percentage-calculator.html
+++ b/sports/on-base-percentage-calculator.html
@@ -552,16 +552,16 @@ Clear all changes
   
   <p>In practice, OPS is a great quick-check: league-average OPS varies by season, but an OPS around .750–.800 is often considered competent, .800–.900 very good, and .900+ excellent; truly elite hitters routinely post OPS numbers well above .900 and sometimes over 1.000 in a season. As with any aggregate statistic, interpret OPS alongside its components (OBP and SLG) and context (league averages, ballpark).</p>
   
-  <h2>FAQ</h2><strong>Q: Does reaching base on an error count toward OBP?</strong>
+  <h2>FAQs</h2><strong>Does reaching base on an error count toward OBP?</strong>
  <p> No — reaching base because of a defensive error is not counted as a time on base in the OBP numerator. The OBP formula intentionally counts only hits, walks, and hit-by-pitch events as “times on base” because those are outcomes the batter directly achieved without a defensive misplay. Errors and fielder’s choice plays are excluded from the numerator, though they remain part of the game’s narrative. This has practical consequences: a batter can appear to have helped his team in a given inning by reaching on an error, but that event will not improve his OBP. The exclusion of errors is part of OBP’s design to measure the batter’s controlled contributions rather than results that depend on a defensive mistake.</p>
   
-  <strong>Q: Can a player have an OBP higher than 1.000?</strong>
+  <strong>Can a player have an OBP higher than 1.000?</strong>
   <p>No — by the formula OBP = (H + BB + HBP) / (AB + BB + HBP + SF), the numerator cannot logically exceed the denominator, so OBP cannot exceed 1.000. In extreme theoretical cases where a player had only walks and no plate appearances that would be excluded from the denominator, the OBP would be 1.000 (100%); but you cannot have an OBP greater than 1.000 because every counted time on base (hit, walk, HBP) is also represented within the denominator’s counted opportunities. That theoretical ceiling makes OBP an intuitively bounded metric: 0.000 means the batter never reached base by the counted methods, 1.000 means the batter reached base every counted time.</p>
   
-  <strong>Q: Why is OBP often preferred to batting average by modern analysts?</strong>
+  <strong>Why is OBP often preferred to batting average by modern analysts?</strong>
   <p>OBP is preferred because it values all the ways a batter contributes to avoiding outs and creating scoring chances, not just hits. Batting average (hits ÷ at bats) ignores walks and HBPs entirely. Because teams only have 27 outs per game, avoiding outs — whether through a walk, a single, or being hit by a pitch — is a major driver of runs scored. Modern analytics has shown that getting on base correlates strongly with run production; therefore OBP gives a more complete and practically useful measure of offensive value than batting average alone. That’s why managers, front offices, and sabermetric writers place heavy emphasis on OBP when building lineups or evaluating hitters.</p>
   
-  <strong>Q: How should I interpret OBP numbers across eras and parks?</strong>
+  <strong>How should I interpret OBP numbers across eras and parks?</strong>
 <p>  Raw OBP numbers are useful, but context matters. League-wide OBP fluctuates with the eras (dead-ball, live-ball, steroid era, modern analytics era) and with ballpark characteristics (some parks favor hitters, others pitchers). For comparisons across seasons or parks, use normalized metrics (for example OBP+ or OPS+) that adjust for league average and park factors. Also compare a player’s OBP to the league average in that specific season to understand whether a .340 OBP was exceptional or merely typical that year. Contextualization prevents misleading conclusions when comparing players separated by time or environment.</p>
   
 </div>
