--- a/math/decimal-to-percent-converter.html
+++ b/math/decimal-to-percent-converter.html
@@ -341,7 +341,7 @@ Clear all changes
     <li><a href="#what-are-decimals">What are decimals?</a></li>
     <li><a href="#what-are-percentages">What are percentages?</a></li>
     <li><a href="#how-to-convert">How to convert decimal to percent manually?</a></li>
-    <li><a href="#faq">FAQ</a></li>
+    <li><a href="#faq">FAQs</a></li>
   </ul>  <!-- 1. What are decimals? (≥600 words) -->  <h2 id="what-are-decimals">What are decimals?</h2>
   <p>
     Decimals are a way to represent numbers that include a fractional part using a base-10 positional system. In everyday arithmetic and measurement, decimals let you express values between whole numbers without writing fractions. The decimal system relies on a decimal point (in English notation the “.” character) to separate the integer (whole number) portion on the left from the fractional portion on the right. For example, the number <strong>12.345</strong> represents twelve and three hundred forty-five thousandths: twelve plus 0.345 (which is 345/1000).
@@ -415,37 +415,37 @@ Clear all changes
     <li>Format the result with the percent sign and round to the necessary precision.</li>
   </ol>  <p>
     Finally, always annotate what the percentage refers to: “75% of capacity,” “3.5% annual interest,” or “33.33% of respondents.” Percentages are shorthand for ratios, and context prevents misinterpretation. Practiced use of the decimal-to-percent rule plus careful formatting and context will keep your numbers accurate and communicative.
-  </p>  <!-- 4. FAQ (≥600 words, avoid asking if calculator is free) -->  <h2 id="faq">FAQ</h2>  <h3>Q: What happens if I type numbers with commas or spaces?</h3>
+  </p>  <h2 id="faq">FAQs</h2>  <h3>What happens if I type numbers with commas or spaces?</h3>
   <p>
     Many people write large numbers with commas (1,000) or spaces (1 000) to increase readability. A robust converter will <strong>strip thousands separators</strong> before interpreting the number. For example, “1,234.56” should be parsed as one thousand two hundred thirty-four point five six (1234.56). If the tool misinterprets separators (for instance, treating commas as decimal points), always check the locale settings or reformat the number to a plain machine-readable form like 1234.56. Good converters either accept a variety of human formats or instruct you to remove separators. When working manually, remove commas and spaces before multiplying or dividing by 100.
-  </p>  <h3>Q: How many decimal places should I display in the percentage result?</h3>
+  </p>  <h3>How many decimal places should I display in the percentage result?</h3>
   <p>
     The number of decimal places depends on context. For currency or pricing use two decimal places (e.g., 4.25%), since monetary amounts are typically expressed to cents. For reporting probabilities or scientific measurements, you might show three, four, or more digits (e.g., 0.1234 → 12.34%). If your data are estimates, showing too many decimals gives a false sense of precision. A good rule: match the display precision to the precision of the underlying data. When in doubt, round to two decimal places for general use and document your rounding convention.
-  </p>  <h3>Q: What is the difference between percent and percentage points?</h3>
+  </p>  <h3>What is the difference between percent and percentage points?</h3>
   <p>
     This distinction causes confusion in news and finance. A change from 10% to 12% is an increase of 2 percentage points but a relative increase of 20% (because 2 is 20% of the original 10). Use percentage points when you want to describe absolute differences between percentages and percent change when you want to describe relative change. Both are valid; just be explicit which one you mean.
-  </p>  <h3>Q: How do I handle repeating decimals, like 1/3?</h3>
+  </p>  <h3>How do I handle repeating decimals, like 1/3?</h3>
   <p>
     Repeating decimals require a choice of display precision. 1/3 = 0.333… so multiplied by 100 it becomes 33.333…%. In practice, choose a finite number of digits based on the needed accuracy—33.33% (rounded to two decimals) or 33.333% (three decimals), for example. If you need exactness, express the value as a fraction (1/3 = 33⅓%) or keep the fraction in symbolic form until the final step.
-  </p>  <h3>Q: Can percentages exceed 100% and what do they mean?</h3>
+  </p>  <h3>Can percentages exceed 100% and what do they mean?</h3>
   <p>
     Yes. Percentages over 100% indicate quantities larger than the reference whole. For example, a 250% increase means the new value is 2.5 times the baseline. In financial returns, a result of 300% means a tripling of the original investment. Always make sure the context clarifies what the base is—percent out of what?—because a percent without its base may be ambiguous.
-  </p>  <h3>Q: What about negative percentages?</h3>
+  </p>  <h3>What about negative percentages?</h3>
   <p>
     Negative percentages represent decreases. If sales fall from 100 to 90, the percent change is (90 − 100)/100 × 100 = −10% (a 10% decrease). Negative signs work identically in decimals and percentages: −0.2 corresponds to −20%.
-  </p>  <h3>Q: How does rounding affect interpretation?</h3>
+  </p>  <h3>How does rounding affect interpretation?</h3>
   <p>
     Rounding can introduce small differences that matter in some contexts. For instance, rounding several intermediary percentages before summing may produce a small discrepancy known as rounding error. In financial reporting, always follow the standardized rounding rules your organization uses. When performing calculations, keep full precision internally and round only for display to minimize cumulative error.
-  </p>  <h3>Q: How do I convert a fraction or ratio into a percent?</h3>
+  </p>  <h3>How do I convert a fraction or ratio into a percent?</h3>
   <p>
     Convert the fraction to a decimal first by dividing numerator by denominator; then multiply by 100. Example: 7/8 = 0.875 → 0.875 × 100 = 87.5%. For a ratio like 3:4, interpret it as 3 divided by (3+4) if you want the share (which gives 3/7 ≈ 42.857%).
-  </p>  <h3>Q: Are percentages always relative measures?</h3>
+  </p>  <h3>Are percentages always relative measures?</h3>
   <p>
     Yes—percentages express relative proportions. But how you define the baseline matters. For example, a 50% share of small sample can be less informative than raw counts or confidence intervals. Always present percentages alongside context (base size, time frame, units) to keep them meaningful.
-  </p>  <h3>Q: How precise is a computer’s conversion?</h3>
+  </p>  <h3>How precise is a computer’s conversion?</h3>
   <p>
     Computers use floating point arithmetic that is extremely fast but can introduce tiny binary rounding artifacts (e.g., 0.1 cannot be represented exactly in binary). For display, tools should format results to a user-friendly number of decimal places. For critical calculations (legal contracts, high-precision science), use decimal libraries or arbitrary precision arithmetic to avoid floating point surprises.
-  </p>  <h3>Q: Any last tips for interpreting percentages?</h3>
+  </p>  <h3>Any last tips for interpreting percentages?</h3>
   <p>
     Always check the base, clarify whether you mean percentage points or percent change, watch rounding, remove formatting characters before calculating, and present raw counts when the denominator is small. Percentages are expressive and concise but depend on careful labeling and context to be trustworthy.
   </p>
