--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
 
 <meta name="title" content="Calclulo: All In One Online Calculators for Finance Health Agriculture Tech and More">
-<meta name="description" content="Calclulo offers fast accurate and free online calculators and conversion tools for finance math health food agriculture engineering and daily life. Trusted by students professionals and farmers. Find calculators for loan APY conversions CGPA nutrition and more with clear explanations and mobile friendly design.">
+<meta name="description" content="Find free online calculators on Calclulo for finance, math, health, food, education, biology, chemistry, agriculture,everyday life and many more.">
 
 <meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
